--- a/src/components/OpenCart/OrderedDishes/OrderedDishes.module.css
+++ b/src/components/OpenCart/OrderedDishes/OrderedDishes.module.css
@@ -43,10 +43,10 @@
 
 .dish{
     display: flex;
+    padding: 1em;
+    margin-bottom: 1em;
     width: 94%;
     border: 1px solid #A67B4A;
-    padding: 1em;
-    margin-top: 1em;
 }
 
 .description{
@@ -176,7 +176,8 @@
     .dish{
         display: flex;
         padding: 1em !important;
-        margin-bottom: 1em !important;
+        margin-bottom: 0.5em !important;
+        width: 91%;
     }
     .cross{
         width: 1em;
