--- a/src/components/Reviews/Reviews.css
+++ b/src/components/Reviews/Reviews.css
@@ -172,3 +172,53 @@
         flex-direction: column;
     }
 }
+
+.skeleton-review {
+    display: flex;
+    margin-top: 1em;
+    padding: 1em;
+    background-color: #2f2924af;
+    border-radius: 5px;
+    animation: pulse 1.5s infinite ease-in-out;
+}
+  
+.skeleton-avatar {
+    width: 5em;
+    height: 5em;
+    background-color: #2f2924af;
+    border-radius: 50%;
+    margin-right: 1em;
+}
+  
+.skeleton-text {
+    flex-grow: 1;
+    height: 1.2em;
+    background-color: #2f2924af;
+    border-radius: 5px;
+    margin-top: 0.5em;
+}
+  
+.skeleton-text:last-child {
+    width: 80%;
+}
+
+.no-reviews{
+    display: flex;
+    justify-content: center;
+    margin-top: 2em;
+    font-size: 1.2em;
+    font-weight: 600;
+    color: #5a5a5a;
+}
+
+@keyframes pulse {
+    0% {
+      background-color: #88663fc7;
+    }
+    50% {
+      background-color: #7a5c3a8f;
+    }
+    100% {
+      background-color: #88663fc7;
+    }
+  }
