--- a/src/components/Reviews/Reviews.css
+++ b/src/components/Reviews/Reviews.css
@@ -1,4 +1,3 @@
-
 .reviews{
     display: flex;
     margin: 0 auto;
@@ -10,7 +9,6 @@
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
-    /* -ms-user-select: none; */
     user-select: none;
     animation: fadeIn 0.3s ease-in-out;
 }
@@ -77,7 +75,6 @@
 
 .rating{
     width: 100%;
-    /* border: 1px solid red; */
 }
 
 .rating input:checked + label ~ label{  /* + label вибирає наступний за input:checked елемент*/
@@ -116,7 +113,7 @@
 .review-right {
     max-width: 70%; 
     overflow-wrap: break-word; /* Розривати слова, що не поміщаються */
-    word-wrap: break-word; /* Підтримка для старих браузерів */
+    word-wrap: break-word;
     hyphens: auto; /* Додавати дефіси для розриву слів, якщо підтримується браузером */
   }
   
@@ -137,16 +134,6 @@
     }
 }
 
-/* @media (max-width: 900px){
-    .review-left{
-        width: 45%;
-    }
-    
-    .review-right {
-        max-width: 55%; 
-    }
-} */
-
 @media (max-width: 900px){
     .reviews{
         display: flex;
@@ -165,7 +152,6 @@
     }
     .review-right{
         max-width: 100%;
-        /* margin: 0 0.5em; */
     } 
     .review{
         display: flex;
